<resources>
    <string name="app_name">BankApp</string>
    <string name="content_description" />

    <string name="branches_main_window">Главный экран</string>
    <string name="branches_atms">Отделения и банкоматы</string>

    <string name="activity_main_worldskills_bank">WorldSkills Bank</string>
    <string name="activity_main_usd">USD</string>
    <string name="activity_main_eur">EUR</string>
    <string name="activity_main_enter">Войти</string>
    <string name="activity_main_atms">Отделения и банкоматы</string>
    <string name="activity_main_courses">Курсы валют</string>
    <string name="activity_menu_main">Главный</string>
    <string name="activity_menu_payment">Платежи</string>
    <string name="activity_menu_history">История</string>
    <string name="activity_menu_dialogs">Диалоги</string>
    <string name="dialog_enter_auth">Авторизация</string>
    <string name="dialog_enter_your_login_and_password">Введите Ваш логин и пароль</string>
    <string name="activity_exchange_rates_main_window">Главный экран</string>
    <string name="activity_exchange_rates_buy">Покупка</string>
    <string name="activity_exchange_rates_sell">Продажа</string>
    <string name="row_menu_card_debit_card">Дебетовая карта</string>
    <string name="row_menu_bank_account_tv_current_account">Текущий счёт</string>
    <string name="row_menu_credit_tv_cash_credit">Кредит наличными</string>
    <string name="arrow_right"><![CDATA[>]]></string>
    <string name="arrow_left"><![CDATA[<]]></string>
    <string name="dialog_change_password_changing_password">Изменение пароля</string>
    <string name="dialog_change_password_enter_new_password">Введите новый пароль</string>
    <string name="dialog_change_login_changing_login">Изменение логина</string>
    <string name="dialog_change_login_enter_new_login">Введите новый логин</string>
    <string name="sertificate">Пользовательское соглашение</string>
    <string name="made_ruslan">Разработал Ихсанов Руслан Ленарович</string>
    <string name="hello_world">Hello world</string>
    <string name="red_btn">Пополнить</string>
    <string name="transfer">Перевести</string>
    <string name="block_card">Блокировка карты</string>
    <string name="AreYouSure">Вы уверены что хотите\n заблокировать карту</string>
    <string name="password">Пароль</string>
    <string name="title_activity_main2">Leanback MainActivity2</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="main">Главная</string>
    <string name="payments">Платежи</string>
    <string name="history">История</string>
    <string name="dialogs">Диалоги</string>
</resources>