<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExchangeRatesActivity">

  <ListView
      android:id="@+id/activity_exchange_rates_lv_list"
      android:layout_width="match_parent"
      android:layout_height="549dp"
      android:layout_marginTop="110dp"
      app:layout_constraintStart_toStartOf="parent" />

  <com.google.android.material.appbar.AppBarLayout
      android:layout_width="match_parent"
      android:layout_height="60dp"
      android:background="@color/grey">

    <Button
        android:id="@+id/activity_exchange_rates_btn_main_menu"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/activity_exchange_rates_main_window"
        android:textColor="@color/blue"
        tools:ignore="TouchTargetSizeCheck" />
  </com.google.android.material.appbar.AppBarLayout>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="45dp"
      android:layout_marginTop="62dp">

    <TextView
        android:id="@+id/activity_exchange_rates_tv_current_date"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="164dp"
        android:layout_marginTop="16dp"
        android:text="@string/activity_exchange_rates_buy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="316dp"
        android:layout_marginTop="16dp"
        android:text="@string/activity_exchange_rates_sell"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

  </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>