<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_green_gradient"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/activity_main_iv_museum"
        android:layout_width="82dp"
        android:layout_height="61dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="17dp"
        app:layout_constraintEnd_toStartOf="@+id/TextView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_bank_selected"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/content_description"/>

    <TextView
        android:id="@+id/TextView"
        android:layout_width="228dp"
        android:layout_height="41dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="48dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/activity_main_worldskills_bank"
        android:textColor="@color/purple_2"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/activity_main_iv_first_white_rect"
        android:layout_width="393dp"
        android:layout_height="117dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView"
        app:srcCompat="@drawable/white_rect"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/content_description" />

    <ImageView
        android:id="@+id/activity_main_iv_second_white_rect"
        android:layout_width="391dp"
        android:layout_height="106dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="176dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView"
        app:srcCompat="@drawable/white_rect"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/content_description" />

    <TextView
        android:id="@+id/TextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/activity_main_usd"
        android:textColor="@color/grey_2"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/activity_main_iv_second_white_rect"
        app:layout_constraintStart_toStartOf="@+id/activity_main_iv_second_white_rect" />

    <TextView
        android:id="@+id/TextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="292dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/activity_main_eur"
        android:textColor="@color/grey_2"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/activity_main_iv_second_white_rect"
        app:layout_constraintStart_toStartOf="@+id/activity_main_iv_second_white_rect" />

    <Button
        android:id="@+id/activity_main_btn_enter"
        android:layout_width="382dp"
        android:layout_height="106dp"
        android:background="@drawable/blue_rect"
        android:text="@string/activity_main_enter"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.82" />

    <ImageView
        android:id="@+id/activity_main_iv_key"
        android:layout_width="44dp"
        android:layout_height="42dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="@+id/activity_main_iv_first_white_rect"
        app:layout_constraintTop_toTopOf="@+id/activity_main_iv_first_white_rect"
        app:srcCompat="@mipmap/ic_chupa_chups_selected"
        android:contentDescription="@string/content_description" />

    <TextView
        android:id="@+id/TextView3"
        android:layout_width="204dp"
        android:layout_height="24dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/activity_main_atms"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@+id/activity_main_iv_first_white_rect"
        app:layout_constraintTop_toTopOf="@+id/activity_main_iv_first_white_rect" />

    <ImageView
        android:id="@+id/activity_main_iv_dollar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activity_main_iv_second_white_rect"
        app:srcCompat="@mipmap/ic_courses"
        android:contentDescription="@string/content_description" />

    <TextView
        android:id="@+id/TextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/activity_main_courses"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activity_main_iv_second_white_rect" />

    <TextView
        android:id="@+id/activity_main_tv_current_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="sans-serif-black"
        android:text=""
        android:textColor="@color/grey_2"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/activity_main_iv_second_white_rect"
        app:layout_constraintTop_toTopOf="@+id/activity_main_iv_second_white_rect" />

    <TextView
        android:id="@+id/activity_main_tv_rub_usd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="12dp"
        android:alpha="0.6"
        android:fontFamily="sans-serif-black"
        android:text=""
        android:textColor="@color/grey_2"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/activity_main_iv_second_white_rect"
        app:layout_constraintStart_toStartOf="@+id/activity_main_iv_second_white_rect" />

    <TextView
        android:id="@+id/activity_main_tv_rub_eu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="320dp"
        android:layout_marginTop="76dp"
        android:alpha="0.6"
        android:fontFamily="sans-serif-black"
        android:text=""
        android:textColor="@color/grey_2"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/activity_main_iv_second_white_rect"
        app:layout_constraintTop_toTopOf="@+id/activity_main_iv_second_white_rect" />


</androidx.constraintlayout.widget.ConstraintLayout>