<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.activities.CardsActivity">

    <Button
        android:id="@+id/button4"
        android:layout_width="134dp"
        android:layout_height="31dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/red_btn"
        android:text="@string/red_btn"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/activity_cards_view_pager" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/activity_cards_view_pager"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.viewpager2.widget.ViewPager2>

    <ListView
        android:id="@+id/activity_cards_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </ListView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:contentDescription="@string/content_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_cards_view_pager"
        app:srcCompat="@drawable/purple_rect" />

    <Button
        android:id="@+id/activity_cards_replenish"
        android:layout_width="134dp"
        android:layout_height="31dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/red_btn"
        android:text="@string/red_btn"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/activity_cards_view_pager" />

    <Button
        android:id="@+id/button3"
        android:layout_width="134dp"
        android:layout_height="31dp"
        android:layout_marginStart="240dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/green_btn"
        android:textSize="11sp"
        android:text="@string/transfer"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/activity_cards_view_pager" />


</androidx.constraintlayout.widget.ConstraintLayout>