<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/grey_4">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/activity_menu_iv_profile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="344dp"
                android:layout_marginTop="4dp"
                android:background="@null"
                android:contentDescription="@string/content_description"
                android:padding="7dp"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_profile"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/activity_menu_tv_user_full_name"
                android:layout_width="232dp"
                android:layout_height="29dp"
                android:layout_marginStart="88dp"
                android:layout_marginTop="12dp"
                android:textColor="@color/white_70"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <ListView
        android:id="@+id/activity_menu_lv_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="80dp"/>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/activity_menu_bnv_bottom_menu"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="580dp"
        android:background="@color/grey_4">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="132dp"
                android:layout_marginTop="48dp"
                android:text="@string/activity_menu_payment"
                android:textColor="@color/white_70"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextContrastCheck" />

            <ImageButton
                android:id="@+id/activity_menu_iv_main"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="9dp"
                android:background="@null"
                android:contentDescription="@string/content_description"
                android:padding="3dp"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_home_selected"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="335dp"
                android:layout_marginTop="50dp"
                android:text="@string/activity_menu_dialogs"
                android:textColor="@color/white_70"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:layout_marginTop="50dp"
                android:text="@string/activity_menu_main"
                android:textColor="@color/white_70"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextContrastCheck" />

            <ImageButton
                android:id="@+id/activity_menu_iv_dialogs"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="332dp"
                android:layout_marginTop="8dp"
                android:background="@null"
                android:contentDescription="@string/content_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_message_selected"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <ImageButton
                android:id="@+id/activity_menu_iv_history"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="248dp"
                android:layout_marginTop="8dp"
                android:background="@null"
                android:contentDescription="@string/content_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_time_selected"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <ImageButton
                android:id="@+id/activity_menu_iv_payment"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="140dp"
                android:layout_marginTop="8dp"
                android:background="@null"
                android:contentDescription="@string/content_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_payments_selected"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="236dp"
                android:layout_marginTop="48dp"
                android:text="@string/activity_menu_history"
                android:textColor="@color/white_70"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextContrastCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.bottomnavigation.BottomNavigationView>


</RelativeLayout>